--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,6 +1,6 @@
-.BuildControls{
+.BuildControls {
     width: 100%;
-    background-color: orange;
+    background-color: #CF8F2E;
     display: flex;
     flex-flow: column;
     align-items: center;
